# helianthus-vrc-explorer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data/: README.md  ebus_model_names.csv  models.csv  myvaillant_register_map.csv
docs/: b524-namespace-invariants.md
fixtures/: README.md  demo_browse.json  dual_namespace_scan.json  vrc720_full_scan.json
scripts/: capture_browse_preview.sh  capture_planner_preview.sh  capture_tui_preview.sh  check_b524_namespace_guardrails.py  check_docs_sync.py  check_protocol_terminology.py  demo_browse_capture.exp  demo_browse_textual.py  demo_planner_capture.exp  demo_planner_textual.py  docs_sync_help.py  generate_models_csv.py  render_tui_preview.py  validate_artifact.py
tests/: conftest.py  test_artifact_schema.py  test_b509_payload_builders.py  test_b524_id.py  test_b524_payload_builders.py  test_b524_value_encoder.py  test_b524_value_parser.py  test_basv_protocol.py  test_browse_store.py  test_browse_watch.py  test_cli.py  test_dummy_transport.py  test_ebus_model_names.py  test_emphasis.py  test_html_report.py  test_issue_208_namespace_anti_regression.py  test_models_csv.py  test_planner_textual.py  test_planner_unknown_groups.py  test_protocol_b516.py  test_protocol_b555.py  test_register_map_coverage.py  test_register_semantics.py  test_replay_trace.py  test_results_viewer_overrides.py  test_scanner_b509.py  test_scanner_b516.py  test_scanner_b555.py  test_scanner_constraints.py  test_scanner_director.py  test_scanner_identity.py  test_scanner_plan.py  test_scanner_register.py  (+10 more)
(+54 files in other folders)
