[project]
name = "helianthus-vrc-explorer"
version = "0.1.0"
description = "Professional CLI tool for scanning Vaillant VRC heating regulators via eBUS (B5 24 / B524)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "httpx>=0.24",
  "rich>=13",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
